[gd_scene load_steps=5 format=3 uid="uid://b8mvu85tu80cr"]

[ext_resource type="Script" uid="uid://4jowahu60dc6" path="res://Scripts/Niveles/menu_fin_nivel.gd" id="1_ypopa"]
[ext_resource type="LabelSettings" uid="uid://boqdkocgf1jjn" path="res://Scenes/UI/UI_laber_settings/inicioTexts.tres" id="2_7gnt8"]
[ext_resource type="LabelSettings" uid="uid://dfgb640btujhh" path="res://Scenes/UI/UI_laber_settings/text8.tres" id="3_p48g1"]
[ext_resource type="FontFile" uid="uid://c70w8hiljv1w" path="res://Scenes/UI/Fuentes_UI/PixelOperator8.ttf" id="4_5apcc"]

[node name="Menu_Fin_Nivel" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ypopa")

[node name="Panel" type="Panel" parent="."]
z_index = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -392.0
offset_top = -233.5
offset_right = 392.0
offset_bottom = 233.5
grow_horizontal = 2
grow_vertical = 2

[node name="VSplitContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 9.0
offset_top = 7.0
offset_right = 264.0
offset_bottom = 156.0
scale = Vector2(3, 3)

[node name="Nivel" type="Label" parent="Panel/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 7.89
label_settings = ExtResource("2_7gnt8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Espacio4" type="Panel" parent="Panel/VSplitContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 3)
layout_mode = 2
size_flags_vertical = 0

[node name="Gemas" type="Label" parent="Panel/VSplitContainer"]
layout_mode = 2
text = "Max Gemas:"
label_settings = ExtResource("3_p48g1")
horizontal_alignment = 1

[node name="GemasMax" type="Label" parent="Panel/VSplitContainer"]
layout_mode = 2
text = "Max Gemas:"
label_settings = ExtResource("3_p48g1")
horizontal_alignment = 1

[node name="Espacio3" type="Panel" parent="Panel/VSplitContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 3)
layout_mode = 2
size_flags_vertical = 0

[node name="Tiempo" type="Label" parent="Panel/VSplitContainer"]
layout_mode = 2
text = "Tiempo min:"
label_settings = ExtResource("3_p48g1")
horizontal_alignment = 1

[node name="MejorTiempo" type="Label" parent="Panel/VSplitContainer"]
layout_mode = 2
text = "Tiempo min:"
label_settings = ExtResource("3_p48g1")
horizontal_alignment = 1

[node name="Espacio2" type="Panel" parent="Panel/VSplitContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Jugar" type="Button" parent="Panel/VSplitContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("4_5apcc")
text = "btn_volver_a_jugar"

[node name="Salir" type="Button" parent="Panel/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("4_5apcc")
text = "btn_volver_al_inicio"

[connection signal="pressed" from="Panel/VSplitContainer/Jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="Panel/VSplitContainer/Salir" to="." method="_on_salir_pressed"]
